--- a/ConexionBD/pom.xml
+++ b/ConexionBD/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.28</version>
         </dependency>
+<dependency>
+    <groupId>com.oracle.database.jdbc</groupId>
+    <artifactId>ucp</artifactId>
+    <version>23.3.0.23.09</version>
+</dependency>
+
     </dependencies>
     <name>ConexionDBDe</name>
 </project>
