--- a/ConexionBD/pom.xml
+++ b/ConexionBD/pom.xml
@@ -10,6 +10,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>com.mycompany.conexionbd.ConexionBD</exec.mainClass>
+        <oracle.jdbc.version>19.6.0.0</oracle.jdbc.version>
     </properties>
     <dependencies>  
         <dependency>
@@ -18,10 +19,15 @@
             <version>8.0.28</version>
         </dependency>
 <dependency>
-    <groupId>com.oracle.database.jdbc</groupId>
-    <artifactId>ucp</artifactId>
-    <version>23.3.0.23.09</version>
-</dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>${oracle.jdbc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ucp</artifactId>
+            <version>${oracle.jdbc.version}</version>
+    </dependency>
 
     </dependencies>
     <name>ConexionDBDe</name>
